--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.datasource.url=jdbc:mysql://localhost:3306/buravel?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=buravel
+spring.datasource.password=buravel
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
 
 
 # 사진파일
