--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ spring.profiles.active=dev
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.datasource.url=jdbc:mysql://localhost:3306/buravel2?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/buravel2?allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=buravel2
 spring.datasource.password=buravel2
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
