--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,8 +9,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=adminid
-spring.mail.password=adminpassword
+spring.mail.username=kisastudyservice@gmail.com
+spring.mail.password=vlstxoccipzxgvaw
 
 
 spring.mail.properties.mail.smtp.auth=true
