--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=local
 
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.dialect =org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.dialect =org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
