[FIX] - post없이  plan 생성하기 & top3리스트 로직 수정

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,10 @@
 spring.profiles.active=dev
 
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.dialect =org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://10.178.0.9:3306/buravel2?allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://10.178.0.9:3306/buravel2?allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/buravel2?allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
 
 spring.datasource.username=buravel2
 spring.datasource.password=buravel2
