--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,3 +17,4 @@ spring.mail.password=vlstxoccipzxgvaw
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+server.tomcat.max-http-form-post-size=100MB
