[fix[ - application.properties(spring.servlet.multipart.max-request-size=100MB)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,10 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 app.host = http://localhost:8080
 
-# Max file size.
-spring.servlet.multipart.max-file-size=100MB
+
 # Max request size.
 spring.servlet.multipart.max-request-size=100MB
-server.tomcat.max-http-form-post-size=100MB
+#server.tomcat.max-http-form-post-size=100000000
+
 
 
